[package]
name = "proc_macro_crate"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.64"

syn = {version="1.0", features=["extra-traits"]}
proc-macro2 = {version="1.0"}
quote = {version="1.0"}

serde_json = "1.0.83"
sui-json = {git = "https://github.com/MystenLabs/sui", branch = "devnet"}

traits = {path = "../traits"}
