[package]
name = "expansion_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.17", features = ["derive"] }
tokio = "1.20.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"

sui-sdk = {git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-keys = {git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-framework = {git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-framework-build = {git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-json = {git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-json-rpc-types = {git = "https://github.com/MystenLabs/sui", branch = "devnet"}

proc_macro_crate = {path = "./proc_macro_crate"}
traits = {path = "./traits"}

[patch.crates-io]
sqlx = { git="https://github.com/huitseeker/sqlx", branch="update_libsqlite3" }